--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "shift-audio-engine",
+  "name": "master-factory-example",
   "version": "0.0.1",
-  "description": "The core audio engine for shift audio lab",
+  "description": "master factory pattern example",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shift-audio-lab/shift-audio-engine.git"
+    "url": "https://github.com/danieldram/ng-master-factory-example"
   },
   "author": "Daniel Ram",
   "license": "ISC",
-  "homepage": "http://www.shiftaudiolab.com",
+  "homepage": "https://github.com/danieldram/ng-master-factory-example",
   "devDependencies": {
     "browser-sync": "^2.7.13",
     "browserify": "^11.0.0",
@@ -28,8 +28,6 @@
     "gulp-util": "^3.0.6",
     "lodash.assign": "^3.2.0",
     "nodemon": "^1.3.7",
-    "tsify": "^0.12.1",
-    "typescript-require": "^0.2.9",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0",
@@ -38,24 +36,17 @@
   },
   "dependencies": {
     "angular": "^1.4.3",
-    "angular-animate": "^1.4.3",
-    "angular-aria": "^1.4.3",
-    "angular-material": "^0.10.0",
     "babelify": "^6.3.0",
     "body-parser": "^1.13.1",
     "event-emitter": "^0.3.3",
-    "express": "^4.12.4",
-    "foundation": "^4.2.1",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "inherit-prototypes": "^0.1.1",
     "jasmine": "^2.3.2",
     "jasmine-jquery": "^2.1.1",
     "jquery": "^2.1.4",
-    "mongodb": "^2.0.34",
-    "mongoose": "^4.0.5",
     "morgan": "^1.6.0",
     "run-sequence": "^1.1.3",
-    "stylus": "^0.51.1",
+    "serialize-for-xhr": "^0.1.5",
     "wallabify": "0.0.9"
   }
 }
