--- a/public/bower.json
+++ b/public/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "store-locator",
+  "name": "MasterFactoryExample",
   "version": "0.0.0",
   "authors": [
-    "Daniel Ram <daniel.ram@iamota.com>"
+    "Daniel Ram"
   ],
-  "description": "iamota Store Locator Component",
+  "description": "",
   "main": "index.html",
   "license": "MIT",
   "ignore": [
